WIP: Addresses alignment issues in challenge-intro--mobile section

--- a/_sass/uswds/_uswds-theme-custom-styles.scss
+++ b/_sass/uswds/_uswds-theme-custom-styles.scss
@@ -806,6 +806,8 @@ $left-dash-width: 50%;
         text-align: left;
 
         div {
+          flex-direction: column;
+          align-items: flex-start;
           justify-content: flex-start;
         }
       }
